--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "survey-friens",
-  "version": "0.1.0",
+  "name": "sruveyfrontend",
+  "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
+    "dev": "vite",
     "dev-node": "tsx watch src/server",
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
+    "ethers": "^6.13.4",
     "express": "^4.21.2",
     "remult": "^0.27.24",
     "tsx": "^4.19.2",
-    "vue": "^3.2.13"
+    "vue": "^3.5.13",
+    "web3modal": "^1.9.12"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-service": "^5.0.8",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "typescript": "~4.5.5"
+    "@tsconfig/node22": "^22.0.0",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.2",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/tsconfig": "^0.7.0",
+    "npm-run-all2": "^7.0.2",
+    "typescript": "~5.6.3",
+    "vite": "^6.0.5",
+    "vite-plugin-vue-devtools": "^7.6.8",
+    "vue-tsc": "^2.1.10"
   }
 }
